--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "agent-collab"
 version = "0.1.0"
-description = "Add your description here"
+description = "Project that allows multiple agents to work together to complete a given task"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
